# parallel-programming-cuda

./: .gitignore  Array.cu  Array.h  CMakeLists.txt  Calculations.cu  Calculations.cuh  Calculations.h  Generator.cu  Generator.h  README.md  main.cu
